--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-aiogram>=3.2.0,<4.0.0
-SQLAlchemy>=2.0.0,<3.0.0
-aiosqlite>=0.19.0
-pydantic>=2.0.0,<3.0.0
-pydantic-settings>=2.0.0,<3.0.0
-python-dotenv>=1.0.0
+aiohttp==3.9.5
+aiogram==3.13.1
+SQLAlchemy==2.0.32
+alembic==1.13.2
+asyncpg==0.29.0
+pydantic-settings==2.4.0
+python-dotenv==1.0.1
