--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-aiogram>=3.2.0,<4.0.0
-SQLAlchemy>=2.0.0,<3.0.0
-aiosqlite>=0.19.0
-pydantic>=2.0.0,<3.0.0
-pydantic-settings>=2.0.0,<3.0.0
-python-dotenv>=1.0.0
+# Pinned dependencies for the Telegram bot runtime.
+# aiocryptopay>=0.4 is still published on PyPI, so we pin to the latest
+# available 0.x release to satisfy Railway's Python buildpack expectation
+# without relying on the unpublished 6.x line.
+aiohttp==3.9.5
+aiogram==3.13.1
+aiocryptopay==0.4.8
+SQLAlchemy==2.0.32
+alembic==1.13.2
+asyncpg==0.29.0
+pydantic-settings==2.4.0
+python-dotenv==1.0.1
